# oauth_py

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  database.py  decorator.py  docker-compose.yml  dotenv_load.py  init_oauth.py  logger.py  mypy.ini  oauth.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: docker-image.yml
routes/: auth.py  game.py  index.py  notes.py
src/: run.py
src/app/: app.py
src/app/config/: constants.py  dotenv_load.py
src/db/: database.py
src/oauth/: oauth.py
src/routes/: auth.py  game.py  index.py  notes.py
src/static/: life.js  life_style.css  style.css
src/templates/: index.html  life.html  login.html  notes.html
src/tests/unit/: test_auth_route.py  test_database.py
src/utils/: decorator.py  logger.py
static/: style.css
templates/: index.html  life.html  login.html  notes.html
