[project]
name = "oauth-py"
version = "0.1.0"
description = ""
authors = [
    {name = "SamuraJ",email = "cergeypro703@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "authlib (>=1.4.0,<2.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-core (>=2.27.2,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pycouchdb (>=1.16.0,<2.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "ruff (>=0.1.0, <1.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
plugins = "pydantic.mypy"
follow_untyped_imports = true

